[package]
name = "kuji"
version = "0.1.0"
edition = "2021"
description = "Stochastic sampling primitives: Gumbel-Softmax, reservoir sampling, and latent permutations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/kuji"
homepage = "https://github.com/arclabs561/kuji"
documentation = "https://docs.rs/kuji"
keywords = ["sampling", "stochastic", "gumbel-softmax", "probability"]
